2008-05-13  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-convert-file.c: Removed, it is not in use.

2008-05-12  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-cache.[ch]: Reworked this module and
	cleaned up the code a bit.
	
	* src/trackerd/tracker-db.c: Fix some build warnings.
	
	* src/trackerd/tracker-email-utils.c: Renamed Tracker member.

	* src/trackerd/tracker-main.[ch]: More clean ups, also made the
	main thread wait for the process-files thread to finish before
	exiting. For some reason, we can't clean up the mutexes after that
	though because they are busy? Looks like the threading here needs
	looking at more thoroughly.
	
	* src/trackerd/tracker-process-files.c: Log when the thread exits.

2008-05-12  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-xesam-live-search.c
	* src/trackerd/tracker-xesam-live-search.h
	* src/trackerd/tracker-dbus-xesam.c
	* src/trackerd/tracker-dbus-xesam.h
	* data/tracker-dbus-xesam.xml: Support for range queries

2008-05-12  Ivan Frade  <ivan.frade@nokia.com>

	* src/trackerd/tracker-db-sqlite.c
	* src/trackerd/tracker-db-sqlite.h
	* src/trackerd/tracker-main.c:
	(tracker_db_close): Now uses TrackerDBInterface instead of
	DBConnecion.
	(tracker_db_needs_data): Now called tracker_db_common_need_build

2008-05-10  Ivan Frade  <ivan.frade@nokia.com>

	* src/libtracker-common/tracker-type-utils.c
	* src/libtracker-common/tracker-type-utils.h:
	(tracker_boolean_as_text_to_number): New function.
	
	* src/libtracker-common/tracker-utils.c
	* src/libtracker-common/tracker-utils.h
	(tracker_escape_string): Moved from tracker-db-sqlite to here.

	* src/trackerd/tracker-db-sqlite.c
	(tracker_db_load_service_file): Splitted in three functions, for
	.metadata, .services and .extensions files. Renamed to 
	load_service_configuration_file, and now it is an static function.
	Removed duplicate code betwwen load_sql_file and load_sql_trigger.

	* src/trackerd/tracker-db-sqlite.h: